[gd_scene load_steps=3 format=3 uid="uid://cl0i4p3lb4mu1"]

[ext_resource type="Script" uid="uid://bn6yaca6gsswf" path="res://scenes/main/hud.gd" id="1_kqgwg"]
[ext_resource type="PackedScene" uid="uid://cve3okgge0civ" path="res://scenes/particles/confetti_particles.tscn" id="2_77e6q"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_kqgwg")

[node name="LevelName" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 25

[node name="LevelCode" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25

[node name="ConfettiParticles" parent="." instance=ExtResource("2_77e6q")]

[node name="LevelWin" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -142.5
offset_right = 239.0
offset_bottom = -5.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Level win !!"

[node name="YouDidIt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -26.5
offset_right = 133.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "you did it :DD"

[node name="WinTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Keys" type="Node2D" parent="."]
position = Vector2(0, 688)
scale = Vector2(4, 4)
